# Kolo-smartcontract

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: rust.yml
contracts/: Cargo.toml  deploy.sh
contracts/savings_group/: Cargo.toml
contracts/savings_group/src/: lib.rs  test.rs
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_add_member.1.json  test_contribute_allowed_after_reset.1.json  test_contribute_not_member.1.json  test_contribute_twice_same_cycle_is_rejected.1.json  test_double_initialize.1.json  test_events.1.json  test_initialize.1.json
neurowealth-vault/contracts/vault/src/: lib.rs
neurowealth-vault/contracts/vault/src/tests/: test_access_control.rs  test_event_schema.rs  test_events.rs  test_initialize.rs  test_legacy_inline.rs  test_math_limits.rs  test_rounding_math.rs  test_shares.rs  test_yield.rs  utils.rs
